fix footer overflow and improve addplan btn logic.

--- a/fitnessClient/src/components/MyPlan/MyPlanContent/MyPlanContent.css
+++ b/fitnessClient/src/components/MyPlan/MyPlanContent/MyPlanContent.css
@@ -8,6 +8,7 @@ ul {
     width: 100%;
     justify-content: center;
     background-color: #f0f4f6;
+    padding-bottom: 150px;
 }
 
 .homeContent .cotentCard {
